homework2/service.yml
apiVersion: v1
kind: Service
metadata:
  name: crud-service
spec:
  selector:
    app: crud-server-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
